# embeddedRustStartingEffort

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
examples/: hello.rs
src/: main.rs
